--- a/src/gui/application/projectList.fxml
+++ b/src/gui/application/projectList.fxml
@@ -120,10 +120,17 @@
          </font>
       </JFXButton>
       <Label layoutX="277.0" prefHeight="50.0" prefWidth="599.0" style="-fx-background-color: #969696;" />
-      <JFXButton fx:id="buttonSaveNewProject" buttonType="RAISED" layoutX="1095.0" layoutY="54.0" onAction="#buttonSaveNewProjectPressed" prefHeight="43.0" prefWidth="131.0" text="Projekt anlegen" textAlignment="CENTER">
+      <JFXButton fx:id="buttonSaveNewProject" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="1166.0" layoutY="50.0" onAction="#buttonSaveNewProjectPressed" prefHeight="50.0" prefWidth="50.0" ripplerFill="ORANGE" text="Projekt anlegen" textAlignment="CENTER" visible="false">
          <font>
             <Font size="15.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/Icons/save.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </JFXButton>
       <JFXListView fx:id="tableProjectList" layoutY="100.0" prefHeight="620.0" prefWidth="553.0" />
       <JFXButton fx:id="buttonOpenProject" contentDisplay="GRAPHIC_ONLY" layoutX="503.0" layoutY="51.0" onAction="#buttonOpenProjectPressed" prefHeight="50.0" prefWidth="50.0" ripplerFill="ORANGE" text="Button">
