--- a/src/gui/application/projectList.fxml
+++ b/src/gui/application/projectList.fxml
@@ -119,7 +119,10 @@
             <Font size="1.0" />
          </font>
       </JFXButton>
-      <Label layoutX="277.0" prefHeight="50.0" prefWidth="599.0" style="-fx-background-color: #969696;" />
+      <Label fx:id="labelNotification" layoutX="277.0" prefHeight="50.0" prefWidth="599.0" style="-fx-background-color: #969696;">
+         <font>
+            <Font name="Roboto Light" size="15.0" />
+         </font></Label>
       <JFXButton fx:id="buttonSaveNewProject" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="1166.0" layoutY="50.0" onAction="#buttonSaveNewProjectPressed" prefHeight="50.0" prefWidth="50.0" ripplerFill="ORANGE" text="Projekt anlegen" textAlignment="CENTER" visible="false">
          <font>
             <Font size="15.0" />
